k8s/cpp-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-cpp
spec:
  selector:
    app: my-app-cpp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
